[package]
name = "ndarray-dot-repro"
version = "0.1.0"
authors = ["Mitsutoshi Aoe <me@maoe.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openblas-src = { git = "https://github.com/maoe/openblas-src", rev = "d2883cc7975ad519ab8ca35582078af839a360fa" }
cblas-sys = "0.1.4"
